# insightface-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  Pipfile  README.md  docker-compose.yml  init_model.py  main.py  pyproject.toml  setup_model.sh
app/: database.py  helper.py  logger.py  main.py  models.py  settings.py
app/analyze/: __init__.py  analyze_image.py  compute_similarity.py
app/database/: __init__.py  init.py  models.py  wait.py
app/database/custom_types/: __init__.py  cube.py
app/exception/: __init__.py
app/exception/handling/: __init__.py  get_default_error_response.py  get_error_response.py  validation_error_handler.py
dockerfiles/: app.Dockerfile  postgres.Dockerfile
