[tool.poetry]
name = "insightface-api"
version = "0.1.0"
description = "A simple deepinsight/insightface implementation with FastAPI for face verification."
authors = ["Jeremy Leonardo <jeremy@hachimail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
psycopg2 = "^2.9.6"
mxnet = "==1.6.0"
insightface = "==0.1.5"
fastapi = "==0.62.0"
uvicorn = "==0.13.0"
python-multipart = "==0.0.5"
sqlalchemy = "==1.3.20"
datetime = "==4.3"
typing = "==3.7.4.3"
python-dotenv = "==0.15.0"
numpy = "==1.23.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
